--- a/TextProcessing/CountingWords_final.ipynb
+++ b/TextProcessing/CountingWords_final.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assignment: Count Most Frequenly used words in Veidenbaums.txt"
+    "# Assignment: Count Most Frequently used words in Veidenbaums.txt\n",
+    "# For English let's use Alice in Wonderland"
    ]
   },
   {
@@ -15,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Open File\n",
+    "# Open File - Get Data\n",
     "# Read Text\n",
     "# Split Text into word tokens\n",
     "# Count these tokens (we need to figure out how to)\n",
@@ -29,6 +30,7 @@
    "outputs": [],
    "source": [
     "# File is under /data/Veidenbaums.txt\n",
+    "# Alice is under /data/Alice_Wonderland.txt\n",
     "# we are under /TextProcessing/CountingWords.ipynb"
    ]
   },
@@ -45,14 +47,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "164410"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "filePath = \"../data/Veidenbaums.txt\"\n",
-    "with open(filePath, encoding=\"utf-8\") as fstream:\n",
-    "    mytext = fstream.read()\n",
-    "len(mytext)"
+    "# filePath = \"../data/Veidenbaums.txt\"\n",
+    "filePath = \"../data/Alice_Wonderland.txt\"\n",
+    "with open(filePath, encoding=\"utf-8\") as fstream: # openign a filestream\n",
+    "    mytext = fstream.read() # here our textual data is read into memory\n",
+    "# here fstream is closed automatically for you\n",
+    "len(mytext) # how many symbols are in our text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\ufeffThe Project Gutenberg EBook of Alice’s Adventures in Wonderland, by Lewis Carroll\\n\\nThis eBook is for the use of anyone '"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mytext[:120] # first 120 symbols from our text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'-tm,\\nincluding how to make donations to the Project Gutenberg Literary\\nArchive Foundation, how to help produce our new eBooks, and how to\\nsubscribe to our email newsletter to hear about new eBooks.\\n\\n\\n'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mytext[-200:] # last two hundred symbols of our text"
    ]
   },
   {
@@ -61,7 +116,191 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mytext[:120]"
+    "# so one issue is that pretty much any data source will need additional cleaning\n",
+    "# here we have header and footer sections with some legal data \n",
+    "# this meta-data would distort our analysis\n",
+    "# for one we would get mentions of Mr. Gutenberg \n",
+    "# which Mr. Lewis Carrol did not intend\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "145459"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# so we need to do some cleaning first\n",
+    "# ideas on getting rid of header and footer sections\n",
+    "#\n",
+    "mytext.index(\"End of Project Gutenberg\") \n",
+    "#this will the index of the first mention of the string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "145459"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleanend = mytext[:mytext.index(\"End of Project Gutenberg\")] \n",
+    "# so this will cut and save text to last character\n",
+    "# before the above text is found\n",
+    "len(cleanend)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'of Wonderland of long ago: and how she\\nwould feel with all their simple sorrows, and find a pleasure in all\\ntheir simple joys, remembering her own child-life, and the happy summer\\ndays.\\n\\nTHE END \\n\\n\\n\\n\\n'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleanend[-200:] # last 200 characters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "729"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start_index = cleanend.index(\"START OF THIS PROJECT GUTENBERG EBOOK\")\n",
+    "start_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "skip = len(\"START OF THIS PROJECT GUTENBERG EBOOK\")\n",
+    "skip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' ALICE’S ADVENTURES IN WONDERLAND ***\\n\\n\\n\\nProduced by Arthur DiBianca and David Widger\\n\\n[Illustration]\\n\\n\\n\\n\\nAlice’s Adventures in Wonderland\\n\\nby Lewis C'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleanall = cleanend[start_index+skip:] # so we want everything from the index+skip\n",
+    "cleanall[:150]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('Alice_clean.txt', mode=\"w\", encoding=\"utf-8\") as file_out:\n",
+    "    file_out.write(cleanall)\n",
+    "# so this recipe will create/overwrite 'Alice_clean.txt'\n",
+    "# using utf-8 encoding\n",
+    "# will write ALL of the text that is in cleanall variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../data/Alice_clean.txt', mode=\"w\", encoding=\"utf-8\") as file_out:\n",
+    "    file_out.write(cleanall)\n",
+    "# so this recipe will create/overwrite 'Alice_clean.txt' in data\n",
+    "# using utf-8 encoding\n",
+    "# will write ALL of the text that is in cleanall variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' ALICE’S ADVENTURES IN WONDERLAND ***\\n\\n\\n\\nProduced by Arthur DiBianca and David Widger\\n\\n[Illustration'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lets pretende i do not have cleanall in memory\n",
+    "# i can load text from my clean file\n",
+    "with open('../data/Alice_clean.txt', mode=\"r\", encoding=\"utf-8\") as file:\n",
+    "    mytext = file.read() # so reads everything\n",
+    "mytext[:100]"
    ]
   },
   {
@@ -69,6 +308,67 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# so let's see about tokenization \n",
+    "# one is to use split using white space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A quick brown fox    jumped \t over the   \n",
+      " \n",
+      " sleepy dog\n"
+     ]
+    }
+   ],
+   "source": [
+    "mysentence = \"A quick brown fox    jumped \\t over the   \\n \\n sleepy dog\"\n",
+    "print(mysentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'quick', 'brown', 'fox', 'jumped', 'over', 'the', 'sleepy', 'dog']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mysentence.split()  # so we split by white space, including newlines and tabs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24630"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# we could try splitting already but we will get dirty data(words)\n",
     "mywords = mytext.split(\" \")\n",
@@ -77,11 +377,311 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['',\n",
+       " 'ALICE’S',\n",
+       " 'ADVENTURES',\n",
+       " 'IN',\n",
+       " 'WONDERLAND',\n",
+       " '***\\n\\n\\n\\nProduced',\n",
+       " 'by',\n",
+       " 'Arthur',\n",
+       " 'DiBianca',\n",
+       " 'and',\n",
+       " 'David',\n",
+       " 'Widger\\n\\n[Illustration]\\n\\n\\n\\n\\nAlice’s',\n",
+       " 'Adventures',\n",
+       " 'in',\n",
+       " 'Wonderland\\n\\nby',\n",
+       " 'Lewis',\n",
+       " 'Carroll\\n\\nTHE',\n",
+       " 'MILLENNIUM',\n",
+       " 'FULCRUM',\n",
+       " 'EDITION',\n",
+       " '3.0\\n\\nContents\\n\\n',\n",
+       " 'CHAPTER',\n",
+       " 'I.',\n",
+       " '',\n",
+       " '']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mywords[:25]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# so we need to get rid of some \\n which split did not\n",
+    "# so how could we do this?\n",
+    "# replace to rescue!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' ALICE’S ADVENTURES IN WONDERLAND ***    Produced by Arthur DiBianca and David Widger  [Illustration'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_text = mytext.replace(\"\\n\", \" \") # why not nothing \"\"?\n",
+    "# replacing with \"\" we run the risk of combining words\n",
+    "clean_text[:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ALICE’S',\n",
+       " 'ADVENTURES',\n",
+       " 'IN',\n",
+       " 'WONDERLAND',\n",
+       " '***',\n",
+       " 'Produced',\n",
+       " 'by',\n",
+       " 'Arthur',\n",
+       " 'DiBianca',\n",
+       " 'and',\n",
+       " 'David',\n",
+       " 'Widger',\n",
+       " '[Illustration]',\n",
+       " 'Alice’s',\n",
+       " 'Adventures',\n",
+       " 'in',\n",
+       " 'Wonderland',\n",
+       " 'by',\n",
+       " 'Lewis',\n",
+       " 'Carroll']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words = clean_text.split()\n",
+    "words[:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mywords[:5]"
+    "# here we could do additionalal cleaning by checking for maybe bad words\n",
+    "# bad characters\n",
+    "# unneeded words such stop words , meaning words which do not contribute to the meaning\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# so how could we count the occurences of each word?\n",
+    "# we could use something like a dictionary with words being keys and value being \n",
+    "# number of occurences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('ALICE’S', 1),\n",
+       " ('ADVENTURES', 1),\n",
+       " ('IN', 1),\n",
+       " ('WONDERLAND', 1),\n",
+       " ('***', 1),\n",
+       " ('Produced', 1),\n",
+       " ('by', 55),\n",
+       " ('Arthur', 1),\n",
+       " ('DiBianca', 1),\n",
+       " ('and', 718),\n",
+       " ('David', 1),\n",
+       " ('Widger', 1),\n",
+       " ('[Illustration]', 1),\n",
+       " ('Alice’s', 11),\n",
+       " ('Adventures', 2),\n",
+       " ('in', 346),\n",
+       " ('Wonderland', 2),\n",
+       " ('Lewis', 1),\n",
+       " ('Carroll', 1),\n",
+       " ('THE', 3)]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_dict = {}\n",
+    "for word in words:\n",
+    "    if word in word_dict.keys():\n",
+    "        word_dict[word] += 1 # increase count for each occurence\n",
+    "    else:\n",
+    "        word_dict[word] = 1 # so first occurence you count as 1\n",
+    "    # below is just a shorter version of the above\n",
+    "#     word_dict[word] = word_dict.get(word, 0) + 1\n",
+    "list(word_dict.items())[:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('the', 1515),\n",
+       " ('and', 718),\n",
+       " ('to', 706),\n",
+       " ('a', 611),\n",
+       " ('of', 493),\n",
+       " ('she', 485),\n",
+       " ('said', 416),\n",
+       " ('it', 347),\n",
+       " ('in', 346),\n",
+       " ('was', 327)]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter # python already provides counter!\n",
+    "word_count = Counter(words) # give a list of tokens\n",
+    "word_count.most_common(10) # and you can get results immediately"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# so now that we have some prelimenary results in\n",
+    "# we could start thinking about stripping stopwords\n",
+    "# maybe getting rid of very short words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "485"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_count[\"she\"] # turns out Counter is just a dictionary with some benefits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "94"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_count[\"he\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"word_count.tsv\", mode=\"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(\"word\\tcount\\n\") # so we add newlines by hand\n",
+    "    for word,count in word_count.most_common():\n",
+    "        f.write(f\"{word}\\t{count}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we can use libraries such as CSV and Pandas to take care of writing \n",
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to continue we will need to perform some additional cleaning\n",
+    "# maybe think about some visualization of some of this data"
    ]
   },
   {
@@ -92,10 +692,10 @@
    "source": [
     "# we will need to clean all lines which contain *** as ending characters\n",
     "# so lets try reading lines\n",
-    "filePath = \"../data/Veidenbaums.txt\"\n",
-    "with open(filePath, encoding=\"utf-8\") as fstream:\n",
-    "    mylines = fstream.readlines()\n",
-    "len(mylines)"
+    "# filePath = \"../data/Veidenbaums.txt\"\n",
+    "# with open(filePath, encoding=\"utf-8\") as fstream:\n",
+    "#     mylines = fstream.readlines()\n",
+    "# len(mylines)"
    ]
   },
   {
@@ -985,7 +1585,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
