instructions for Kaggle data

--- a/analysis/news-outlets-climate-change.ipynb
+++ b/analysis/news-outlets-climate-change.ipynb
@@ -17,7 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Data source https://www.kaggle.com/snapcrack/all-the-news"
+    "# Data source https://www.kaggle.com/snapcrack/all-the-news\n",
+    "# extract to directory kaggle which should be sibling to your current directory"
    ]
   },
   {
