--- a/TextProcessing/CountingWords_final.ipynb
+++ b/TextProcessing/CountingWords_final.ipynb
@@ -63,10 +63,25 @@
    ],
    "source": [
     "# filePath = \"../data/Veidenbaums.txt\"\n",
+    "# .. means one level up\n",
+    "# data folder is a sibling of TextProcessing\n",
     "filePath = \"../data/Alice_Wonderland.txt\"\n",
+    "# with is so called context manager\n",
+    "# it will automatically close the file - otherwise you need to do it manually - which everyone forgets to do :)\n",
     "with open(filePath, encoding=\"utf-8\") as fstream: # openign a filestream\n",
     "    mytext = fstream.read() # here our textual data is read into memory\n",
-    "# here fstream is closed automatically for you\n",
+    "    # as with most things in Python after : you need to indent\n",
+    "    # fstream is still open here\n",
+    "    # there are other ways to read files - but this is the most common one\n",
+    "    # who said that you can't step into the same river twice?\n",
+    "    # you can - but it will be a different river\n",
+    "    # which Greek philosopher said that?\n",
+    "    # Heraclitus - one of the pre-Socratics\n",
+    "    # with file streams we can reset the pointer to the beginning of the file\n",
+    "    # fstream.seek(0) - rare that you would need to do this\n",
+    "    # usually you read the file once and then do something with it - like count words\n",
+    "    # you do not need to read the file again - maybe you will want to write it again but that is a different story\n",
+    "# once indentation ends here fstream is closed automatically for you\n",
     "len(mytext) # how many symbols are in our text"
    ]
   },
@@ -112,6 +127,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Project Gutenberg EBook of Alice’s Adventures in Wonderland, by Lewis Carroll\n",
+      "\n",
+      "This eBook is for the use of anyone anywhere in the United States and most\n",
+      "other parts of the world at no cost and with almost no restrictions\n",
+      "whatsoever.  You may copy it, give it away or re-use it under the terms o\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mytext[:300]) # print first 300 symbols\n",
+    "# print gives your more human readable output than just typing the variable name - which is more suitable for debugging"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -125,7 +162,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# type of mytext is string\n",
+    "type(mytext)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +192,7 @@
        "145459"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +207,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "164410"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(mytext)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# so there are about 17000 symbols between the end of the book and the end of the file\n",
+    "# we can use this to get rid of the footer\n",
+    "# we can also use this to get rid of the header\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -158,36 +247,20 @@
        "145459"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# so cleanend will be a new string containing only the text of the book from the start of the book to the end of the book\n",
+    "# we use slicing to get the text we want\n",
     "cleanend = mytext[:mytext.index(\"End of Project Gutenberg\")] \n",
+    "\n",
+    "# of course this assumes we know the sentinel value for our end of the book\n",
     "# so this will cut and save text to last character\n",
     "# before the above text is found\n",
     "len(cleanend)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'of Wonderland of long ago: and how she\\nwould feel with all their simple sorrows, and find a pleasure in all\\ntheir simple joys, remembering her own child-life, and the happy summer\\ndays.\\n\\nTHE END \\n\\n\\n\\n\\n'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cleanend[-200:] # last 200 characters"
    ]
   },
   {
@@ -196,40 +269,25 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "729"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "of Wonderland of long ago: and how she\n",
+      "would feel with all their simple sorrows, and find a pleasure in all\n",
+      "their simple joys, remembering her own child-life, and the happy summer\n",
+      "days.\n",
+      "\n",
+      "THE END \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "start_index = cleanend.index(\"START OF THIS PROJECT GUTENBERG EBOOK\")\n",
-    "start_index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "37"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "skip = len(\"START OF THIS PROJECT GUTENBERG EBOOK\")\n",
-    "skip"
+    "print(cleanend[-200:]) # last 200 characters"
    ]
   },
   {
@@ -240,7 +298,7 @@
     {
      "data": {
       "text/plain": [
-       "' ALICE’S ADVENTURES IN WONDERLAND ***\\n\\n\\n\\nProduced by Arthur DiBianca and David Widger\\n\\n[Illustration]\\n\\n\\n\\n\\nAlice’s Adventures in Wonderland\\n\\nby Lewis C'"
+       "729"
       ]
      },
      "execution_count": 11,
@@ -249,16 +307,82 @@
     }
    ],
    "source": [
-    "cleanall = cleanend[start_index+skip:] # so we want everything from the index+skip\n",
-    "cleanall[:150]"
+    "# first we find out where the header ends\n",
+    "start_index = cleanend.index(\"START OF THIS PROJECT GUTENBERG EBOOK\")\n",
+    "start_index"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# we also need to know how many characters to skip\n",
+    "skip = len(\"START OF THIS PROJECT GUTENBERG EBOOK\")\n",
+    "skip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " ALICE’S ADVENTURES IN WONDERLAND ***\n",
+      "\n",
+      "\n",
+      "\n",
+      "Produced by Arthur DiBianca and David Widger\n",
+      "\n",
+      "[Illustration]\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Alice’s Adventures in Wonderland\n",
+      "\n",
+      "by Lewis Carroll\n",
+      "\n",
+      "THE MILLENNIUM FULCRUM EDITION 3.0\n",
+      "\n",
+      "Contents\n",
+      "\n",
+      " CHAPTER I.     Down the Rabbit-Hole\n",
+      " CHAPTER \n"
+     ]
+    }
+   ],
+   "source": [
+    "cleanall = cleanend[start_index+skip:] # so we want everything from the index+skip\n",
+    "print(cleanall[:250]) # print first 250 characters of our cleaned text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "# i will open/create a new file with name Alice_cleaned.txt\n",
+    "# notice it is in the same folder as current notebook\n",
+    "# mode is w - which means write\n",
+    "# encoding is utf-8 - we might have some non-ascii characters\n",
+    "# file_out is arbitrary name for our filestream object\n",
     "with open('Alice_clean.txt', mode=\"w\", encoding=\"utf-8\") as file_out:\n",
     "    file_out.write(cleanall)\n",
     "# so this recipe will create/overwrite 'Alice_clean.txt'\n",
@@ -268,10 +392,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# i could also save the file in a different folder in this case like data which is our sibling folder\n",
     "with open('../data/Alice_clean.txt', mode=\"w\", encoding=\"utf-8\") as file_out:\n",
     "    file_out.write(cleanall)\n",
     "# so this recipe will create/overwrite 'Alice_clean.txt' in data\n",
@@ -281,27 +406,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# how to create a folder if it does not exist?\n",
+    "# we can use pathlib\n",
+    "# pathlib is a new module in Python 3\n",
+    "# it is a bit more advanced than os\n",
+    "\n",
+    "# we can use pathlib to create a folder if it does not exist\n",
+    "# we can also use it to check if a folder exists\n",
+    "\n",
+    "from pathlib import Path # import Path from pathlib module\n",
+    "# we can create a path object\n",
+    "\n",
+    "# create folder my_folder if it does not exist\n",
+    "Path(\"my_folder\").mkdir(exist_ok=True) # exist_ok=True means do not throw an error if folder exists\n",
+    "# in this case it will be a child folder of current folder\n",
+    "# next time i run it it will not throw an error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "' ALICE’S ADVENTURES IN WONDERLAND ***\\n\\n\\n\\nProduced by Arthur DiBianca and David Widger\\n\\n[Illustration'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[' ALICE’S ADVENTURES IN WONDERLAND ***\\n', '\\n', '\\n', '\\n', 'Produced by Arthur DiBianca and David Widger\\n', '\\n', '[Illustration]\\n', '\\n', '\\n', '\\n', '\\n', 'Alice’s Adventures in Wonderland\\n', '\\n', 'by Lewis Carroll\\n', '\\n', 'THE MILLENNIUM FULCRUM EDITION 3.0\\n', '\\n', 'Contents\\n', '\\n', ' CHAPTER I.     Down the Rabbit-Hole\\n']\n"
+     ]
     }
    ],
    "source": [
-    "# lets pretende i do not have cleanall in memory\n",
+    "# lets pretend i do not have cleanall in memory\n",
     "# i can load text from my clean file\n",
+    "# mode r is read which is default so not really needed\n",
     "with open('../data/Alice_clean.txt', mode=\"r\", encoding=\"utf-8\") as file:\n",
-    "    mytext = file.read() # so reads everything\n",
-    "mytext[:100]"
+    "    # mytext = file.read() # so reads everything\n",
+    "    # alterantively we can read line by line\n",
+    "    # this is useful if we have a very large file\n",
+    "    # we can read line by line and process it\n",
+    "    text_lines = file.readlines() # this will read all lines into a list\n",
+    "# print first 10 lines\n",
+    "print(text_lines[:20])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -315,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -330,12 +488,13 @@
    ],
    "source": [
     "mysentence = \"A quick brown fox    jumped \\t over the   \\n \\n sleepy dog\"\n",
+    "# we have some newlines and some tabs in our sentence\n",
     "print(mysentence)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -344,73 +503,111 @@
        "['A', 'quick', 'brown', 'fox', 'jumped', 'over', 'the', 'sleepy', 'dog']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mysentence.split()  # so we split by white space, including newlines and tabs"
+    "# Python string has a split method which will split a string into a list of strings\n",
+    "mysentence.split()  # so we split by white space, including newlines and tabs\n",
+    "# you can consider split a type of tokenization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "24630"
+       "['A',\n",
+       " 'quick',\n",
+       " 'brown',\n",
+       " 'fox',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " 'jumped',\n",
+       " '\\t',\n",
+       " 'over',\n",
+       " 'the',\n",
+       " '',\n",
+       " '',\n",
+       " '\\n',\n",
+       " '\\n',\n",
+       " 'sleepy',\n",
+       " 'dog']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mysentence.split(\" \") # so we split by single white space, this might not be what we want"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26537"
+      ]
+     },
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# we could try splitting already but we will get dirty data(words)\n",
-    "mywords = mytext.split(\" \")\n",
+    "mywords = cleanall.split() # so any white space will be a delimiter\n",
     "len(mywords)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['',\n",
-       " 'ALICE’S',\n",
+       "['ALICE’S',\n",
        " 'ADVENTURES',\n",
        " 'IN',\n",
        " 'WONDERLAND',\n",
-       " '***\\n\\n\\n\\nProduced',\n",
+       " '***',\n",
+       " 'Produced',\n",
        " 'by',\n",
        " 'Arthur',\n",
        " 'DiBianca',\n",
        " 'and',\n",
        " 'David',\n",
-       " 'Widger\\n\\n[Illustration]\\n\\n\\n\\n\\nAlice’s',\n",
+       " 'Widger',\n",
+       " '[Illustration]',\n",
+       " 'Alice’s',\n",
        " 'Adventures',\n",
        " 'in',\n",
-       " 'Wonderland\\n\\nby',\n",
+       " 'Wonderland',\n",
+       " 'by',\n",
        " 'Lewis',\n",
-       " 'Carroll\\n\\nTHE',\n",
+       " 'Carroll',\n",
+       " 'THE',\n",
        " 'MILLENNIUM',\n",
        " 'FULCRUM',\n",
        " 'EDITION',\n",
-       " '3.0\\n\\nContents\\n\\n',\n",
-       " 'CHAPTER',\n",
-       " 'I.',\n",
-       " '',\n",
-       " '']"
+       " '3.0']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,9 +645,82 @@
    ],
    "source": [
     "clean_text = mytext.replace(\"\\n\", \" \") # why not nothing \"\"?\n",
-    "# replacing with \"\" we run the risk of combining words\n",
+    "# replacing with \"\" we run the risk of combining words across lines\n",
     "clean_text[:100]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " BOB’S ADVENTURES IN WONDERLAND ***\n",
+      "\n",
+      "\n",
+      "\n",
+      "Produced by Arthur DiBianca and David Widger\n",
+      "\n",
+      "[Illustration]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# remember replace is a string method it returns a new string\n",
+    "# so we need to assign it to a variable\n",
+    "# we can use it to replace multiple characters or strings\n",
+    "# we can also use it to replace with nothing\n",
+    "\n",
+    "# for example\n",
+    "bob_adventures = cleanall.replace(\"ALICE\", \"BOB\").replace(\"Alice\", \"Bob\")\n",
+    "# so for example we can replace all mentions of Alice with Bob\n",
+    "print(bob_adventures[:100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "399"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# count Bob\n",
+    "bob_adventures.count(\"Bob\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO \n",
+    "# before we split we might want to normalize our text - make it all lower case\n",
+    "# we also might want to remove punctuation\n",
+    "# we can use string.punctuation to get a list of punctuation symbols\n",
+    "# also we can use string.whitespace to get a list of whitespace symbols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1571,7 +1841,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1585,7 +1855,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+   }
   }
  },
  "nbformat": 4,
