web scraping part 2

--- a/WebScraping/Web Scraping with Pandas.ipynb
+++ b/WebScraping/Web Scraping with Pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,16 +13,29 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.ss.com/en/real-estate/flats/riga/centre/sell/'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# url = \"https://www.ss.com/lv/real-estate/flats/riga/centre/sell/\" \n",
-    "url = \"https://www.ss.com/en/real-estate/flats/riga/centre/hand_over/\" # hand_over meaning renting\n",
-    "# notice how we can specify some parameters in the url\n"
+    "url = \"https://www.ss.com/en/real-estate/flats/riga/centre/sell/\"\n",
+    "# url = \"https://www.ss.com/en/real-estate/flats/riga/centre/hand_over/\" # hand_over meaning renting\n",
+    "# notice how we can specify some parameters in the url\n",
+    "url"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +44,7 @@
        "list"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,16 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7"
+       "6"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,13 +82,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# mdn on table tag\n",
+    "# https://developer.mozilla.org/en-US/docs/Web/HTML/Element/table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.read_html.html\n",
     "# pandas reads tables by default ALL tables on the page\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -99,9 +122,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Announcements \\tdate</th>\n",
-       "      <th>Announcements \\tdate.1</th>\n",
-       "      <th>Announcements \\tdate.2</th>\n",
+       "      <th>Advertisements \\tdate</th>\n",
+       "      <th>Advertisements \\tdate.1</th>\n",
+       "      <th>Advertisements \\tdate.2</th>\n",
        "      <th>Street</th>\n",
        "      <th>R.</th>\n",
        "      <th>m2</th>\n",
@@ -116,95 +139,95 @@
        "      <th>0</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Izīrē dzīvokli ar mājīgu un komfortablu iekārt...</td>\n",
-       "      <td>Stabu 49</td>\n",
+       "      <td>Двухкомнатная квартира с парковочным местом во...</td>\n",
+       "      <td>Valdemara 81</td>\n",
        "      <td>2</td>\n",
-       "      <td>50</td>\n",
-       "      <td>4/5</td>\n",
-       "      <td>Perewar</td>\n",
-       "      <td>6 €</td>\n",
-       "      <td>300 €/mon.</td>\n",
+       "      <td>48</td>\n",
+       "      <td>2/5</td>\n",
+       "      <td>Pre-war house</td>\n",
+       "      <td>1,927 €</td>\n",
+       "      <td>92,500 €</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Tiek izīrēts lielisks 2 istabu dzīvoklis ar sk...</td>\n",
-       "      <td>Merkela 17</td>\n",
-       "      <td>2</td>\n",
-       "      <td>49</td>\n",
-       "      <td>4/5</td>\n",
-       "      <td>Perewar</td>\n",
-       "      <td>11.22 €</td>\n",
-       "      <td>550 €/mon.</td>\n",
+       "      <td>Logi iziet uz abiem pagalmiem, dzīvoklis ir pi...</td>\n",
+       "      <td>Blaumana 29</td>\n",
+       "      <td>4</td>\n",
+       "      <td>108</td>\n",
+       "      <td>1/5</td>\n",
+       "      <td>Pre-war house</td>\n",
+       "      <td>1,472 €</td>\n",
+       "      <td>159,000 €</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Īpašnieks izīrē , tiko pēc remonta , ar sadzīv...</td>\n",
-       "      <td>Deglava 9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>26</td>\n",
-       "      <td>1/6</td>\n",
-       "      <td>Recon.</td>\n",
-       "      <td>13.42 €</td>\n",
-       "      <td>349 €/mon.</td>\n",
+       "      <td>Ekskluzīvs, gaišs, plašs un mājīgs 3-istabu dz...</td>\n",
+       "      <td>Valdemara 49</td>\n",
+       "      <td>3</td>\n",
+       "      <td>93</td>\n",
+       "      <td>2/3</td>\n",
+       "      <td>Pre-war house</td>\n",
+       "      <td>2,871 €</td>\n",
+       "      <td>267,000 €</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Владелец сдает новую 2-уровневую квартиру (гос...</td>\n",
-       "      <td>Brivibas 101</td>\n",
-       "      <td>3</td>\n",
-       "      <td>73</td>\n",
-       "      <td>1/5</td>\n",
-       "      <td>Perewar</td>\n",
-       "      <td>6.85 €</td>\n",
-       "      <td>500 €/mon.</td>\n",
+       "      <td>Īpašniece pārdod dzīvojamā mājā pirmajā stāvā ...</td>\n",
+       "      <td>Stabu 84</td>\n",
+       "      <td>2</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1/4</td>\n",
+       "      <td>Pre-war house</td>\n",
+       "      <td>720 €</td>\n",
+       "      <td>59,000 €</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Доступна уже сегодня. Владелец сдает новую ква...</td>\n",
-       "      <td>Lachplesha 121</td>\n",
+       "      <td>Предложение от застройщика. В элитном проекте ...</td>\n",
+       "      <td>Merkela 2</td>\n",
        "      <td>2</td>\n",
-       "      <td>43</td>\n",
-       "      <td>2/6</td>\n",
-       "      <td>New</td>\n",
-       "      <td>8.95 €</td>\n",
-       "      <td>385 €/mon.</td>\n",
+       "      <td>49</td>\n",
+       "      <td>3/6</td>\n",
+       "      <td>Recon.</td>\n",
+       "      <td>3,200 €</td>\n",
+       "      <td>156,800 €</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Announcements \\tdate  Announcements \\tdate.1  \\\n",
-       "0                   NaN                     NaN   \n",
-       "1                   NaN                     NaN   \n",
-       "2                   NaN                     NaN   \n",
-       "3                   NaN                     NaN   \n",
-       "4                   NaN                     NaN   \n",
+       "   Advertisements \\tdate  Advertisements \\tdate.1  \\\n",
+       "0                    NaN                      NaN   \n",
+       "1                    NaN                      NaN   \n",
+       "2                    NaN                      NaN   \n",
+       "3                    NaN                      NaN   \n",
+       "4                    NaN                      NaN   \n",
        "\n",
-       "                              Announcements \\tdate.2          Street  R.  m2  \\\n",
-       "0  Izīrē dzīvokli ar mājīgu un komfortablu iekārt...        Stabu 49   2  50   \n",
-       "1  Tiek izīrēts lielisks 2 istabu dzīvoklis ar sk...      Merkela 17   2  49   \n",
-       "2  Īpašnieks izīrē , tiko pēc remonta , ar sadzīv...       Deglava 9   1  26   \n",
-       "3  Владелец сдает новую 2-уровневую квартиру (гос...    Brivibas 101   3  73   \n",
-       "4  Доступна уже сегодня. Владелец сдает новую ква...  Lachplesha 121   2  43   \n",
+       "                             Advertisements \\tdate.2        Street R.   m2  \\\n",
+       "0  Двухкомнатная квартира с парковочным местом во...  Valdemara 81  2   48   \n",
+       "1  Logi iziet uz abiem pagalmiem, dzīvoklis ir pi...   Blaumana 29  4  108   \n",
+       "2  Ekskluzīvs, gaišs, plašs un mājīgs 3-istabu dz...  Valdemara 49  3   93   \n",
+       "3  Īpašniece pārdod dzīvojamā mājā pirmajā stāvā ...      Stabu 84  2   82   \n",
+       "4  Предложение от застройщика. В элитном проекте ...     Merkela 2  2   49   \n",
        "\n",
-       "  Floor   Series Price, m2       Price  \n",
-       "0   4/5  Perewar       6 €  300 €/mon.  \n",
-       "1   4/5  Perewar   11.22 €  550 €/mon.  \n",
-       "2   1/6   Recon.   13.42 €  349 €/mon.  \n",
-       "3   1/5  Perewar    6.85 €  500 €/mon.  \n",
-       "4   2/6      New    8.95 €  385 €/mon.  "
+       "  Floor         Series Price, m2      Price  \n",
+       "0   2/5  Pre-war house   1,927 €   92,500 €  \n",
+       "1   1/5  Pre-war house   1,472 €  159,000 €  \n",
+       "2   2/3  Pre-war house   2,871 €  267,000 €  \n",
+       "3   1/4  Pre-war house     720 €   59,000 €  \n",
+       "4   3/6         Recon.   3,200 €  156,800 €  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +248,7 @@
        "(30, 10)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,6 +803,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# you can export to json, csv, excel, sql, etc\n",
     "df.to_json(\"center.json\")"
    ]
   },
@@ -789,7 +813,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save to csv\n",
+    "df.to_csv(\"center.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we can save to excel as well\n",
     "df.to_excel(\"center.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# so pandas read html is great for scraping tables and it is very easy to use\n",
+    "# restrictions are that it can only read tables and it can only read tables that are in the same format\n",
+    "\n",
+    "# in our case we want to extract links to each flat\n",
+    "# so we will need to use beautiful soup or some other library"
    ]
   },
   {
@@ -1155,7 +1203,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1169,7 +1217,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+   }
   }
  },
  "nbformat": 4,
