--- a/WebScraping/Selenium.ipynb
+++ b/WebScraping/Selenium.ipynb
@@ -27,24 +27,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# now drivers"
+    "# What is Selenium?\n",
+    "# Selenium is a web automation tool that allows you to automate web browser interactions from Python.\n",
+    "# Selenium is a tool that automates web browsers.\n",
+    "# Selenium page: https://www.seleniumhq.org/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: selenium in c:\\users\\val-wd\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (4.6.1)\n",
+      "Requirement already satisfied: certifi>=2021.10.8 in c:\\users\\val-wd\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from selenium) (2022.9.24)\n",
+      "Requirement already satisfied: urllib3[socks]~=1.26 in c:\\users\\val-wd\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from selenium) (1.26.13)\n",
+      "Requirement already satisfied: trio~=0.17 in c:\\users\\val-wd\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from selenium) (0.22.0)\n",
+      "Requirement already satisfied: trio-websocket~=0.9 in c:\\users\\val-wd\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from selenium) (0.9.2)\n",
+      "Requirement already satisfied: outcome in c:\\users\\val-wd\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from trio~=0.17->selenium) (1.2.0)\n",
+      "Requirement already satisfied: cffi>=1.14 in c:\\users\\val-wd\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from trio~=0.17->selenium) (1.15.1)\n",
+      "Requirement already satisfied: async-generator>=1.9 in c:\\users\\val-wd\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from trio~=0.17->selenium) (1.10)\n",
+      "Requirement already satisfied: sniffio in c:\\users\\val-wd\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from trio~=0.17->selenium) (1.3.0)\n",
+      "Requirement already satisfied: idna in c:\\users\\val-wd\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from trio~=0.17->selenium) (3.4)\n",
+      "Requirement already satisfied: exceptiongroup>=1.0.0rc9 in c:\\users\\val-wd\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from trio~=0.17->selenium) (1.0.4)\n",
+      "Requirement already satisfied: sortedcontainers in c:\\users\\val-wd\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from trio~=0.17->selenium) (2.4.0)\n",
+      "Requirement already satisfied: attrs>=19.2.0 in c:\\users\\val-wd\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from trio~=0.17->selenium) (22.1.0)\n",
+      "Requirement already satisfied: wsproto>=0.14 in c:\\users\\val-wd\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from trio-websocket~=0.9->selenium) (1.2.0)\n",
+      "Requirement already satisfied: PySocks!=1.5.7,<2.0,>=1.5.6 in c:\\users\\val-wd\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from urllib3[socks]~=1.26->selenium) (1.7.1)\n",
+      "Requirement already satisfied: pycparser in c:\\users\\val-wd\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from cffi>=1.14->trio~=0.17->selenium) (2.21)\n",
+      "Requirement already satisfied: h11<1,>=0.9.0 in c:\\users\\val-wd\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium) (0.14.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip available: 22.2.2 -> 22.3.1\n",
+      "[notice] To update, run: C:\\Users\\val-wd\\AppData\\Local\\Programs\\Python\\Python310\\python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install selenium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# if import fails\n",
+    "# 1. check if selenium is installed \n",
+    "# if not install it with !pip install selenium\n",
+    "# 2. check if the path to the driver is correct\n",
+    "# 3. check if the driver is up to date\n",
+    "\n",
+    "\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "\n",
-    "browser = webdriver.Chrome()"
+    "browser = webdriver.Chrome()\n",
+    "# import to install driver: https://sites.google.com/a/chromium.org/chromedriver/downloads\n",
+    "# list of drivers for all browsers: https://selenium-python.readthedocs.io/installation.html#drivers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +127,7 @@
        "'https://www.ss.com/'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +153,11 @@
     }
    ],
    "source": [
-    "cars =browser.find_element_by_id(\"mtd_97\")\n",
+    "# find element by id using new syntax\n",
+    "# import BY\n",
+    "from selenium.webdriver.common.by import By\n",
+    "cars = browser.find_element(By.ID, 'mtd_97') # just and example\n",
+    "\n",
     "type(cars)"
    ]
   },
@@ -145,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -154,13 +212,36 @@
        "'Vieglie auto'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cars.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if i have the element I can click on it\n",
+    "cars.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# so many methods are similar to beautiful soup\n",
+    "# you have more options with selenium\n",
+    "# you can click, you can scroll, you can take screenshots, you can automate the browser\n",
+    "\n",
+    "# very powerful if not a bit slow"
    ]
   },
   {
@@ -580,7 +661,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -594,7 +675,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "47c451675a0654ad5e0a963e36439631235dc6723a5765b51cb05e7be179a59b"
+   }
   }
  },
  "nbformat": 4,
