--- a/Python_Introduction.ipynb
+++ b/Python_Introduction.ipynb
@@ -852,6 +852,26 @@
     "\n",
     "This is an <ins>underlined</ins> text\n",
     "\n",
+    "### Quoting\n",
+    "\n",
+    "So we can use > to quote text\n",
+    "\n",
+    "> To be or not to be, that is the question\n",
+    "\n",
+    "To quote code we use backticks `print(\"Hello World\")`\n",
+    "\n",
+    "### Colors\n",
+    "\n",
+    "We can use HTML to change colors\n",
+    "<font color='red'>This is red text</font>\n",
+    "How about <font color='blue'>blue text</font>\n",
+    "We can use RGB values as well <font color='#FF00FF'>Magenta</font>\n",
+    "\n",
+    "### HTML in Markdown\n",
+    "\n",
+    "We can use HTML in Markdown cells to get more control over formatting\n",
+    "Pretty much anything you can do in a web page you can do in a Markdown cell\n",
+    "\n",
     "\n",
     "# Esc - Y makes cell a code cell\n",
     "# Esc - M makes cell a markdown cell\n",
