Adjusted image linking example

--- a/Python_Introduction.ipynb
+++ b/Python_Introduction.ipynb
@@ -420,7 +420,18 @@
    },
    "source": [
     "## Batteries included principle\n",
-    "![Batteries](https://github.com/ValRCS/Digital_Discourse_ETH713_Fall_2020/blob/main/img/batteries.jpg?raw=1)"
+    "\n",
+    "\n",
+    "We can link to image locally or from the web\n",
+    "Local:\n",
+    "![Batteries](img/button-cell-batteries.jpg)\n",
+    "\n",
+    "From the web has the advantage that it will available from Google Colab or other online services which provide Jupyter notebooks\n",
+    "So for online I provide full link to the image\n",
+    "![Batteries](https://github.com/ValRCS/Digital_Discourse_ETH713_Fall_2020/blob/main/img/button-cell-batteries.jpg?raw=true)\n",
+    "\n",
+    "To adjust image size use HTML code\n",
+    "<img src=\"img/button-cell-batteries.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
