Checking start and end of file.

--- a/TextProcessing/CountingWords_final.ipynb
+++ b/TextProcessing/CountingWords_final.ipynb
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,8 @@
     "# here file is closed\n",
     "\n",
     "# let's print how many characters we have\n",
-    "print(\"Number of characters in the text:\", len(text))"
+    "print(\"Number of characters in the text:\", len(text))\n",
+    "# so we have the entire text as a single string in our text variable residing in memory"
    ]
   },
   {
@@ -685,6 +686,131 @@
    ],
    "source": [
     "len(mytext)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Checking start and end of our text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Project Gutenberg EBook of Alice’s Adventures in Wonderland, by Lewis Carroll\n",
+      "\n",
+      "This eBook is for the use of anyone anywhere in the United States and most\n",
+      "other parts of the world at no cost and with almost no restrictions\n",
+      "whatsoever.  You may copy it, give it away or re-use it under the terms of\n",
+      "the Project Gutenberg License included with this eBook or online at\n",
+      "www.gutenberg.org.  If you are not located in the United States, you'll have\n",
+      "to check the laws of the country where you are located before using this ebook.\n",
+      "\n",
+      "Title: Alice’s Adventures in Wonderland\n",
+      "\n",
+      "Author: Lewis Carroll\n",
+      "\n",
+      "Release Date: June 25, 2008 [EBook #11]\n",
+      "[Most recently updated: October 12, 2020]\n",
+      "\n",
+      "Language: English\n",
+      "\n",
+      "Character set encoding: UTF-8\n",
+      "\n",
+      "*** START OF THIS PROJECT GUTENBERG EBOOK ALICE’S ADVENTURES IN WONDERLAND ***\n",
+      "\n",
+      "\n",
+      "\n",
+      "Produced by Arthur DiBianca and David Widger\n",
+      "\n",
+      "[Illustration]\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Alice’s Adventures in Wonderland\n",
+      "\n",
+      "by Lewis Carroll\n",
+      "\n",
+      "THE MILLENNIUM FULCRUM EDITION 3.0\n",
+      "\n",
+      "Contents\n",
+      "\n",
+      " CHAPTER I.     Down the Rabbit-Hole\n",
+      " CHAPTER II.    The Pool of Tears\n",
+      " CHAPTER III.   A Caucus-Race and a Long Tale\n",
+      " CHAPTER IV.    The Rabbit Sends in a Little Bill\n",
+      " CHAPTER V.     Advice from a Caterpillar\n",
+      " CHAPTER VI.    Pig a\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let's print first N symbols\n",
+    "N = 1_200\n",
+    "print(text[:N]) # so simple slicing works on strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nberg Web pages for current donation\n",
+      "methods and addresses. Donations are accepted in a number of other\n",
+      "ways including checks, online payments and credit card donations. To\n",
+      "donate, please visit: www.gutenberg.org/donate\n",
+      "\n",
+      "Section 5. General Information About Project Gutenberg-tm electronic works.\n",
+      "\n",
+      "Professor Michael S. Hart was the originator of the Project\n",
+      "Gutenberg-tm concept of a library of electronic works that could be\n",
+      "freely shared with anyone. For forty years, he produced and\n",
+      "distributed Project Gutenberg-tm eBooks with only a loose network of\n",
+      "volunteer support.\n",
+      "\n",
+      "Project Gutenberg-tm eBooks are often created from several printed\n",
+      "editions, all of which are confirmed as not protected by copyright in\n",
+      "the U.S. unless a copyright notice is included. Thus, we do not\n",
+      "necessarily keep eBooks in compliance with any particular paper\n",
+      "edition.\n",
+      "\n",
+      "Most people start at our Web site which has the main PG search\n",
+      "facility: www.gutenberg.org\n",
+      "\n",
+      "This Web site includes information about Project Gutenberg-tm,\n",
+      "including how to make donations to the Project Gutenberg Literary\n",
+      "Archive Foundation, how to help produce our new eBooks, and how to\n",
+      "subscribe to our email newsletter to hear about new eBooks.\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "## how about last N symbols\n",
+    "print(text[-N:]) # so simple slicing works on strings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Getting rid of header\n",
+    "\n",
+    "So we have determined that header ends with 4 new lines. That gives us a way to get rid of the header automatically."
    ]
   },
   {
