--- a/JSON_APIs/Using_JSON_APIs.ipynb
+++ b/JSON_APIs/Using_JSON_APIs.ipynb
@@ -8,6 +8,16 @@
    "source": [
     "# JSON\n",
     "\n",
+    "## Lesson Objectives\n",
+    "\n",
+    "1. Understand what JSON is.\n",
+    "2. Understand the structure of JSON.\n",
+    "3. Use JSON in Python.\n",
+    "4. Use JSON as a data interchange format from APIs\n",
+    "5. JSON in Digital Discourse\n",
+    "\n",
+    "## Brief Introduction\n",
+    "\n",
     "JSON (JavaScript Object Notation) is a lightweight data-interchange format. It is easy for humans to read and write. It is easy for machines to parse and generate. It is based on a subset of the JavaScript Programming Language, Standard ECMA-262 3rd Edition - December 1999. JSON is a text format that is completely language independent but uses conventions that are familiar to programmers of  Python and also of the C-family of languages, including C, C++, C#, Java, JavaScript, Perl, and many others. These properties make JSON an ideal data-interchange language.\n",
     "\n",
     "## JSON in Digital Discourse\n",
