--- a/JSON_APIs/Using_JSON_APIs.ipynb
+++ b/JSON_APIs/Using_JSON_APIs.ipynb
@@ -2420,6 +2420,8 @@
     "* Mastodon API - https://docs.joinmastodon.org/api/ - free, but authorization needed, a bit complex\n",
     "* Telegram API - https://core.telegram.org/bots/api - free, but authorization needed, a bit complex\n",
     "* Instagram API - https://www.instagram.com/developer/ - paid only after December 4th, 2024:(\n",
+    "* Facebook API - https://developers.facebook.com/docs/apis-and-sdks - very limited for free, but paid for more\n",
+    "* Youtube API - https://developers.google.com/youtube/v3 - free, but authorization needed, might be rate limited\n",
     "\n",
     "### News and Media Platforms\n",
     "\n",
