--- a/WebScraping/WebScraping.ipynb
+++ b/WebScraping/WebScraping.ipynb
@@ -1,98 +1,98 @@
 {
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "JadHGot8xwE8"
-      },
-      "source": [
-        "## Web Scraping\n",
-        "\n",
-        "Web scraping, web harvesting, or web data extraction is data scraping used for extracting data from websites. Web scraping software may access the World Wide Web directly using the Hypertext Transfer Protocol, or through a web browser.\n",
-        "\n",
-        "![Robots](https://upload.wikimedia.org/wikipedia/commons/6/63/Web_Robots_Logo.png)\n",
-        "\n",
-        "\n",
-        "## Scraping process\n",
-        "\n",
-        "* request URL\n",
-        "* parse response\n",
-        "* find required HTML elements and their content\n",
-        "* save\n",
-        "\n",
-        "## Scraping guidelines\n",
-        "\n",
-        "* Check for other ways of accessing data(JSON API, CSV download etc.)\n",
-        "* Play nice! Don't be an a.. (don't overload site with requests, etc)\n",
-        "* Access publicly available data only\n",
-        "* Respect robots.txt\n",
-        "* difference between scraping something and usage(publishing etc.)\n",
-        "\n",
-        "### Legality\n",
-        "\n",
-        "As of Sep 2019 direction is that it \"should\" be legal to scrape publicly available data provided you do not disturb the normal operation of the website.\n",
-        "\n",
-        "https://www.eff.org/deeplinks/2019/09/victory-ruling-hiq-v-linkedin-protects-scraping-public-data\n",
-        "\n",
-        "Side note: vast majority of the big Large Language Models(LLM) such as ChatGPT depend on web scraped data. Whether that is an argument for or against web scraping is an open question..\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "7qaZOuvLxwFA"
-      },
-      "source": [
-        "\n",
-        "## Learning basics of HTML\n",
-        "\n",
-        "* https://developer.mozilla.org/en-US/docs/Web/HTML\n",
-        "* https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Getting_started\n",
-        "\n",
-        "## HTTP protocol\n",
-        "\n",
-        "* https://developer.mozilla.org/en-US/docs/Web/HTTP/Overview\n",
-        "\n",
-        "## Chrome dev tools\n",
-        "* https://developers.google.com/web/tools/chrome-devtools/open\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "uidH2cPSxwFA"
-      },
-      "outputs": [],
-      "source": []
-    }
-  ],
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.8.3"
-    },
-    "colab": {
-      "provenance": []
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "JadHGot8xwE8"
+   },
+   "source": [
+    "## Web Scraping\n",
+    "\n",
+    "Web scraping, web harvesting, or web data extraction is data scraping used for extracting data from websites. Web scraping software may access the World Wide Web directly using the Hypertext Transfer Protocol, or through a web browser.\n",
+    "\n",
+    "![Robots](https://upload.wikimedia.org/wikipedia/commons/6/63/Web_Robots_Logo.png)\n",
+    "\n",
+    "\n",
+    "## Scraping process\n",
+    "\n",
+    "* request URL - uniform resource locator (web address)\n",
+    "* parse response - response is text, we need to parse it\n",
+    "* find required HTML elements and their content\n",
+    "* save in the format we need\n",
+    "\n",
+    "## Scraping guidelines\n",
+    "\n",
+    "* Check for other ways of accessing data(JSON API, CSV download etc.)\n",
+    "* Play nice! Don't be an a.. (don't overload site with requests, etc)\n",
+    "* Access publicly available data only\n",
+    "* Respect robots.txt\n",
+    "* difference between scraping something and usage(publishing etc.)\n",
+    "\n",
+    "### Legality\n",
+    "\n",
+    "As of Sep 2019 direction is that it \"should\" be legal to scrape publicly available data provided you do not disturb the normal operation of the website.\n",
+    "\n",
+    "https://www.eff.org/deeplinks/2019/09/victory-ruling-hiq-v-linkedin-protects-scraping-public-data\n",
+    "\n",
+    "Side note: vast majority of the big Large Language Models(LLM) such as ChatGPT depend on web scraped data. Whether that is an argument for or against web scraping is an open question..\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "7qaZOuvLxwFA"
+   },
+   "source": [
+    "\n",
+    "## Learning basics of HTML\n",
+    "\n",
+    "* https://developer.mozilla.org/en-US/docs/Web/HTML\n",
+    "* https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Getting_started\n",
+    "\n",
+    "## HTTP protocol\n",
+    "\n",
+    "* https://developer.mozilla.org/en-US/docs/Web/HTTP/Overview\n",
+    "\n",
+    "## Chrome dev tools\n",
+    "* https://developers.google.com/web/tools/chrome-devtools/open\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "uidH2cPSxwFA"
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
